--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Joan M. Romero - Facundo Cepeda - Martin Gonzalez",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
     "jsonwebtoken": "^8.5.1",
